Enhance documentation and expand Java collection demos
- Updated README.md to provide a comprehensive learning path and detailed Java mastery roadmap.
- Added architecture.md for an in-depth understanding of Java internals, including JDK, JRE, and JVM.
- Introduced core.md as a complete learning guide for Java fundamentals, covering topics from basics to advanced.
- Implemented various demos for core concepts: ArraysDemo.java, ControlFlowDemo.java, DataTypesDemo.java, MethodsDemo.java, OperatorsDemo.java, ExceptionDemo.java, GenericsDemo.java, and more.
- Enhanced collection demos with detailed comparisons and usage scenarios for HashMap, TreeMap, LinkedList, and other collection types.
- Improved code examples with comprehensive comments and structured output for better understanding.